force-app/main/default/objects/Class_Management__c/Class_Management__c.object-meta.xml
<CustomObject>
    <label>Class Management</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Class Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>