force-app/main/default/objects/Class_Management__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>SFDC_Class__c</referenceTo>
    <relationshipLabel>Class Management</relationshipLabel>
    <relationshipName>Class_Management</relationshipName>
    <type>Lookup</type>
</CustomField>