force-app/main/default/objects/Class_Management__c/fields/week_of_class__c.field-meta.xml
<CustomField>
    <fullName>week_of_class__c</fullName>
    <formula>Today() - Class__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2nd week of class</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>