force-app/main/default/objects/Class_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Class__c</columns>
    <columns>Status__c</columns>
    <columns>week_of_class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>